# yume

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml
.beads/: metadata.json
.github/: copilot-instructions.md
.github/workflows/: docker-build.yml  publish-docs.yml
.opencode/agent/: architecture-planner.md  implementation-reviewer.md  implementer.md
aiagents/: ai_scheduler.py  answer_machine.py  day_planner.py  efa_agent.py  ha_agent.py  kitchenowl.py  memory_manager.py  memory_summarizer.py
components/: agent_hooks.py  calendar.py  conversation.py  logging_manager.py  timezone_utils.py  weather.py
controllers/: api_controller.py  auth_controller.py  webhook_controller.py
docs/architecture/: 01-introduction-and-goals.adoc  02-architecture-constraints.adoc  03-system-scope-and-context.adoc  04-solution-strategy.adoc  06-runtime-view.adoc  (+8 more)
services/: ai_engine.py  ai_scheduler.py  auth.py  chat_message_manager.py  context_manager.py  day_planner.py  efa.py  home_assistant.py  interaction_tracker.py  kitchenowl.py  matrix_bot.py  memory_manager.py  memory_summarizer.py  migration.py  scheduler_run_logger.py  settings_manager.py
tests/: README.md  conftest.py  test_chat_message_manager.py  test_efa_vrr.py  test_home_assistant_transport.py
tools/: day_planner.py  efa.py  home_assistant.py  kitchenowl.py  memory.py
ui/: index.html  package-lock.json  package.json  vite.config.js
yume-spring/: build.gradle.kts  docker-compose.yml  settings.gradle.kts  tempo.yaml
(+218 files in other folders)
